# libnvme-rs

./: .gitattributes  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  deny.toml  inspect_coverage.sh  inspect_disc.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  qemu.yml
libnvme/: Cargo.toml  build.rs
libnvme-sys/: Cargo.toml  build.rs  wrapper.h
libnvme-sys/examples/: smoke.rs
libnvme-sys/vendored-headers/: README.md
libnvme/examples/: format_smoke.rs  fw_info.rs  id_ctrl.rs  io_smoke.rs  list_nvme.rs  scan.rs  smart_log.rs
libnvme/src/: admin.rs  commands.rs  controller.rs  directives.rs  error.rs  fabrics.rs  features.rs  host.rs  identify.rs  io.rs  lib.rs  log.rs  namespace.rs  path.rs  reservations.rs  root.rs  subsystem.rs  util.rs  zns.rs
libnvme/src/features/: get.rs  mod.rs  set.rs  types.rs
libnvme/tests/: scan.rs
tests/qemu/: .gitignore  README.md  ci.sh  run.sh
tests/qemu/cloud-init/: meta-data  user-data
