[workspace]
resolver = "2"
members = ["libnvme-sys", "libnvme"]

[workspace.package]
version = "0.2.1"
edition = "2021"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/Cyberpsych0s1s/libnvme-rs"
authors = ["Cyberpsych0s1s"]
readme = "README.md"
keywords = ["nvme", "linux", "ffi", "bindings", "storage"]
categories = ["external-ffi-bindings", "os::linux-apis"]

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "warn"
