[workspace]
resolver = "2"
members = ["libnvme-sys", "libnvme"]

[workspace.package]
version = "0.8.0"
edition = "2021"
rust-version = "1.85"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/Cyberpsych0s1s/libnvme-rs"
homepage = "https://github.com/Cyberpsych0s1s/libnvme-rs"
authors = ["Cyberpsych0s1s"]
readme = "README.md"
keywords = ["nvme", "linux", "ffi", "bindings", "storage"]
categories = ["external-ffi-bindings", "os::linux-apis"]

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "warn"

[workspace.lints.clippy]
# Force every `unsafe { ... }` block to carry a `// SAFETY:` comment. CI
# runs with `-D warnings` so this becomes a hard requirement.
undocumented_unsafe_blocks = "warn"
