[package]
name = "libnvme-sys"
description = "Raw FFI bindings to the Linux libnvme C library"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
links = "nvme"
build = "build.rs"

[build-dependencies]
bindgen = "0.71"
pkg-config = "0.3"

[lints]
workspace = true
