[package]
name = "libnvme-sys"
description = "Raw FFI bindings to the Linux libnvme C library (use `libnvme` for the safe wrapper)"
documentation = "https://docs.rs/libnvme-sys"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
links = "nvme"
build = "build.rs"

[build-dependencies]
bindgen = "0.72"
pkg-config = "0.3"

[lints]
workspace = true
