[package]
name = "libnvme"
description = "Safe, idiomatic Rust bindings for the Linux libnvme C library"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
libnvme-sys = { path = "../libnvme-sys", version = "0.1.0" }

[lints]
workspace = true
