[package]
name = "libnvme"
description = "Safe, idiomatic Rust bindings for the Linux libnvme C library"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
build = "build.rs"

[dependencies]
libnvme-sys = { path = "../libnvme-sys", version = "0.2.0" }

[build-dependencies]
pkg-config = "0.3"

[lints]
workspace = true
